--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
-		"svelte": "^3.53.1",
+		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"typescript": "^4.9.3",
-		"vite": "^3.2.4"
+		"vite": "^4.0.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@prismicio/client": "^6.7.1",
 		"@prismicio/helpers": "^2.3.6",
-		"gsap": "^3.11.3",
-		"ilojo-bar-components": "^1.1.0"
+		"gsap": "^3.11.3"
 	}
 }
