--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/kit": "^1.0.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"typescript": "^4.9.3",
@@ -19,9 +19,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@prismicio/client": "^6.7.1",
-		"@prismicio/helpers": "^2.3.6",
-		"gsap": "^3.11.3",
-		"ilojo-bar-components": "^1.1.0"
+		"gsap": "^3.11.3"
 	}
 }
