--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
-	"type": "module",
-	"dependencies": {
-		"gsap": "^3.11.3"
-	}
+	"type": "module"
 }
